<resources>
    <string name="app_name">Contact Manager</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="create_account">Create Account</string>
    <string name="sign_up">Sign Up</string>
    <string name="already_have_an_account_sign_in">Already have an account? Sign In</string>
    <string name="welcome_back">Welcome Back!</string>
    <string name="sign_in">Sign In</string>
    <string name="don_t_have_an_account_sign_up">Don\'t have an account? Sign Up</string>
    <string name="logged_in_successfully">Logged In Successfully</string>
    <string name="welcome_username">Welcome [Username]</string>
    <string name="your_email_is_email">Your email is : [Email]</string>
    <string name="add">Add</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="name">Name</string>
    <string name="add_contact">Add Contact</string>
    <string name="ok">OK</string>
    <string name="you_are_logged_in">You are logged In</string>
    <string name="hello_username">Hello [username]</string>
    <string name="contact_added_successfully">Contact Added Successfully</string>
</resources>